--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.7",
     "base-64": "^1.0.0",
     "expo": "~50.0.8",
+    "expo-checkbox": "~2.7.0",
     "expo-linear-gradient": "~12.7.2",
     "expo-status-bar": "~1.11.1",
     "nativewind": "^2.0.11",
